--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 tokio = { version = "1.16.1", features = ["rt", "rt-multi-thread", "macros", "net", "io-util"] }
 lexopt = "0.2.0"
 anyhow = "1.0.53"
+log = "0.4.8"
+env_logger = "0.9.0"
